--- a/public/components/music-album-card.html
+++ b/public/components/music-album-card.html
@@ -1,18 +1,22 @@
+<link href="/bower_components/paper-fab/paper-fab.html" rel="import">
+<link href="/bower_components/paper-icon-button/paper-icon-button.html" rel="import">
+
 <polymer-element name="music-album-card">
   <template>
     <style>
-    .back-button {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-    }
+      :host {
+        padding: 5% 10% 0;
+      }
+      .back-button {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+      }
       .card {
         position: relative;
-        top: 100px;
         height: 400px;
         border-radius: 3px;
         text-align: start;
-        overflow: hidden;
         background: #fff;
         box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
@@ -31,17 +35,20 @@
       .card-album-title {
         font-size: 2em;
       }
+      paper-fab {
+        position: absolute;
+        top: -28px;
+        right: -28px;
+      }
     </style>
 
     <paper-icon-button class="back-button" icon="arrow-back" on-tap="{{transition}}" cross-fade></paper-icon-button>
 
     <div class="card" layout horizontal hero-id="{{album.artist}}-{{album.album}}" hero on-tap="{{transition}}">
+      <paper-fab icon="delete" on-tap="{{delete}}"></paper-fab>
       <div class="card-left" style="background:{{album.art}};" hero-id="{{album.artist}}-{{album.album}}-art" hero></div>
       <div class="card-right" flex>
         <div layout vertical>
-          <div layout horizontal>
-            <paper-icon-button icon="delete" on-tap="{{delete}}"></paper-icon-button>
-          </div>
           <div layout horizontal center>
             <div>
               <div class="card-icon" style="background:{{album.art}};"></div>
